--- a/fe/fe-core/pom.xml
+++ b/fe/fe-core/pom.xml
@@ -842,6 +842,16 @@ under the License.
             <groupId>io.airlift</groupId>
             <artifactId>concurrent</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.aliyun.odps</groupId>
+            <artifactId>odps-sdk-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.aliyun.odps</groupId>
+            <artifactId>odps-sdk-table-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
