--- a/fe/pom.xml
+++ b/fe/pom.xml
@@ -57,7 +57,7 @@ under the License.
         <dlf-metastore-client.version>0.2.14</dlf-metastore-client.version>
         <sonar.organization>starrocks</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <odps.version>0.45.5-public</odps.version>
+        <odps.version>0.48.0-SNAPSHOT</odps.version>
     </properties>
 
     <profiles>
